[package]
name = "macros"
version = "0.1.0"
authors = ["Kishan Patel <kpatel20538@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
heck = "0.3"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
mustache-core = { path = ".." }

